--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,22 +22,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#" onclick="return false"><img src="/img/logo.jpg"
-                    alt="Apple takes back this picture"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                    alt="Apple takes away this picture"></a>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Post1<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Post2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Post3</a>
-                    </li>
+                <ul class="navbar-nav" id='menu'>
+
                 </ul>
             </div>
         </div>
